feat: implement section unit test